[tool.poetry]
name = "bdo-binds"
version = "0.1.0"
description = ""
authors = ["Philippe Garneau <philippegarneau1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pywinauto = "^0.6.8"
pydirectinput = "^1.0.2"
keyboard = "^0.13.5"
psutil = "5.7.2"
pywin32 = "228"
Pillow = "^7.1.0"
pyscreenshot = "2.2"
opencv-python = "4.4.0.44"
d3dshot = "0.1.5"
numpy = "1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
